--- a/Website/style.css
+++ b/Website/style.css
@@ -3,11 +3,11 @@ body{
 }
 a{
     position: relative;
-    left:80%;
+    left:70%;
     top: -10px;   
 }
 hr{
-    position: relative;;
+    position: relative;
     top: -10px; 
 }
 img{
