--- a/Website/style.css
+++ b/Website/style.css
@@ -3,17 +3,17 @@ body{
 }
 a{
     position: relative;
-    left:70%;
-    top: -20px;   
+    left: 70%;   
 }
-hr{
-    position: relative;
-    top: -10px; 
-}
-img{
+.ceteralign{
     position: relative;
     left: 40%;
-    top: -50px;
+    top: 50px;
+    box-shadow: 0px 10px 10px 2px;
 }
-
+.quote{
+    position: relative;
+    left: 10%;
+    top: -20px;
+}
 
