--- a/Website/style.css
+++ b/Website/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(251, 248, 244);
 }
-a{
+.link{
     position: relative;
     left: 70%;   
 }
@@ -9,17 +9,20 @@ a{
     position: relative;
     left: 40%;
     top: 50px;
-    box-shadow: 0px 10px 10px 2px;
+    box-shadow: 10px 10px 30px 0px;
 }
 .price{
     position: relative;
-    left: 41%;
+    left: 40%;
     top: 50px;
     background: rgb(122, 160, 255);
     border-radius: 30px;
-    box-shadow: 0px 3px 3px;
+    box-shadow: 10px 1px 30px 0px;
 }
-input:hover{
-    background: aquamarine;
+button:hover{
+    color: #255784;
+    background: #2196f3;
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
 }
+
 
