--- a/Website/style.css
+++ b/Website/style.css
@@ -24,5 +24,15 @@ button:hover{
     background: #2196f3;
     box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
 }
-
+h1{
+    position: relative;
+    left: 40px;
+}
+form{
+    background-color: blanchedalmond;
+}
+footer{
+    background-color: black;
+    color: white;
+}
 
